packages/beff-wasm/fixtures/errors/cannot-resolve/r10.ts
export const r10 = {
  "/hello123": {
    get: async (): Function => {
      return "test";
    },
  },
};
